generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  admin
  normal
}

enum FamilyRole {
  father
  mother
  child
}

model Family {
  id               String   @id @default(uuid()) @db.Uuid
  familyName       String   @map("family_name")
  symbolPubKey     String?  @unique @map("symbol_pub_key")
  symbolPrivKey    String?  @unique @map("symbol_priv_key")
  familyVoiceMosaicId String   @unique @map("family_voice_mosaic_id")
  createdAt        DateTime @default(now()) @map("created_at")
  users            User[]
  discussions      Discussion[]

  @@map("families")
}

model User {
  id            String    @id @default(uuid()) @db.Uuid
  email         String    @unique
  passwordHash  String    @map("password_hash")
  familyId      String    @map("family_id") @db.Uuid
  isFamilyOwner Boolean   @default(false) @map("is_family_owner")
  isFirst       Boolean   @default(false) @map("is_first")
  role          UserRole  @default(normal)
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")
  family        Family    @relation(fields: [familyId], references: [id], onDelete: Cascade)
  sessions      Session[]
  userInfo      UserInfo?
  quests        Quest[]
  discussions   Discussion[]

  @@index([familyId])
  @@map("users")
}

model Session {
  id        String    @id @default(uuid()) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  tokenHash String    @unique @map("token_hash")
  createdAt DateTime  @default(now()) @map("created_at")
  expiresAt DateTime  @map("expires_at")
  revokedAt DateTime? @map("revoked_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([expiresAt])
  @@index([revokedAt])
  @@map("sessions")
}

model UserInfo {
  userId       String    @id @map("user_id") @db.Uuid
  name         String
  familyRole   FamilyRole @map("family_role")
  symbolPubKey String?   @unique @map("symbol_pub_key")
  createdAt    DateTime  @default(now()) @map("created_at")
  updatedAt    DateTime  @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("user_infos")
}

model Quest {
  id           String   @id @default(uuid()) @db.Uuid
  userId       String   @map("user_id") @db.Uuid
  title        String
  detail       String
  issuerUserId String   @map("issuer_user_id") @db.Uuid
  targetUserId String   @map("target_user_id") @db.Uuid
  isResolved   Boolean  @map("is_resolved")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("quests")
}

model Discussion {
  id           String   @id @default(uuid()) @db.Uuid
  userId       String   @map("user_id") @db.Uuid
  familyId     String   @map("family_id") @db.Uuid
  title        String
  detail       String
  authorUserId String   @map("author_user_id") @db.Uuid
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  family Family @relation(fields: [familyId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([familyId])
  @@map("discussions")
}
