@startuml

hide circle
skinparam linetype ortho
skinparam packageStyle rectangle

enum UserRole {
  admin
  normal
}

enum FamilyRole {
  father
  mother
  child
}

entity "families" as families {
	* id: UUID
	--
	family_name: TEXT <<NOT NULL>>
	symbol_pub_key: TEXT? <<UNIQUE>>
	symbol_priv_key: TEXT? <<UNIQUE>>
	family_voice_mosaic_id: TEXT <<UNIQUE>>
	created_at : TIMESTAMP(3)
	
}

entity "users" as users {
  * id : UUID
  --
  email : TEXT <<UNIQUE>>
  password_hash : TEXT
  family_id: UUID<<FK>>
  is_family_owner : BOOLEAN
  is_first : BOOLEAN
  role: UserRole
  created_at : TIMESTAMP(3)
  updated_at : TIMESTAMP(3)
}

entity "sessions" as sessions {
  * id : UUID
  --
  user_id : UUID <<FK>>
  token_hash : TEXT <<UNIQUE>>
  created_at : TIMESTAMP(3)
  expires_at : TIMESTAMP(3)
  revoked_at : TIMESTAMP(3)?
}

entity "user_infos" as user_infos {
  * user_id : UUID <<PK, FK>>
  --
  name : TEXT
  family_role : FamilyRole
  symbol_pub_key : TEXT? <<UNIQUE>>
  created_at : TIMESTAMP(3)
  updated_at : TIMESTAMP(3)
}

entity "quests" as quests {
  id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  title : TEXT
  detail : TEXT
  issuer_user_id : UUID
  target_user_id : UUID
  is_resolved : BOOLEAN
  created_at : TIMESTAMP(3)
  updated_at : TIMESTAMP(3)
}

entity "discussions" as discussions {
  id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  title : TEXT
  detail : TEXT
  author_user_id : UUID
  family_id : UUID
  created_at : TIMESTAMP(3)
  updated_at : TIMESTAMP(3)
}

users "1" -- "0..*" sessions : user_id
families "1" -- "0..*" users : family_id
users "1" -- "0..1" user_infos : user_id
users "1" -- "0..*" quests : user_id
users "1" -- "0..*" discussions : user_id
users "0..*" -- "1" UserRole : role
user_infos "0..*" -- "1" FamilyRole : family_role

note right of families
  PK:
  - id

  UNIQUE:
  - family_voice_mosaic_id

  REQUIRED:
  - family_name

  AUDIT:
  - created_at

  RULE:
  - family 作成時に
    owner user を同時作成
end note

note right of users
  UNIQUE:
  - email

  FK:
  - family_id -> family.id
    ON DELETE CASCADE

  RULE:
  - family_id is required
  - family_id is immutable
    after user creation
  - is_family_owner is assigned
    only to the account created
    with family creation
  - is_first indicates whether
    initial onboarding is pending
  - role is application-wide role
  - one admin user is created
    on initial app startup
end note

note right of sessions
  INDEX:
  - user_id
  - expires_at
  - revoked_at

  FK:
  - user_id -> users.id
    ON DELETE CASCADE
end note

note right of user_infos
  UNIQUE:
  - symbol_pub_key

  FK:
  - user_id -> users.id
    ON DELETE CASCADE

  RULE:
  - family_role is family-local role
end note

note right of quests
  INDEX:
  - user_id

  FK:
  - user_id -> users.id
    ON DELETE CASCADE

  RULE:
  - issuer_user_id stores
    quest creator
  - target_user_id stores
    assignee
  - is_resolved stores
    completion status
end note

note right of discussions
  INDEX:
  - user_id

  FK:
  - user_id -> users.id
    ON DELETE CASCADE

  RULE:
  - author_user_id stores
    discussion creator
end note

@enduml
